@@ -1,5 +1,10 @@
 Changelog for seoPro.
 
+seoPro 1.0.3 pl
+==============
+- Fixed keyword count to work also with Cyrillic
+- Fixed empty NOT NULL field resource to NULL
+
 seoPro 1.0.2 pl
 ==============
 - Added system setting for to enabled/disabled sitename in preview and seoPro.title placeholder
